# TOG

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  QUICKSTART.md  README.md  WHY_TOG.md  test_output.txt
docs/: ERROR_HANDLING.md  GPU_PARALLEL.md  PATTERN_MATCHING.md  TRAITS.md  architecture.md  features.md  implementation_reasoning.md  performance.md  simd.md  simplicity.md  syntax.md
examples/: advanced_arrays.tog  arrays.tog  comparison.tog  comprehensive.tog  control_flow.tog  control_flow_fixed.tog  enums.tog  error_handling.tog  error_handling_practical.tog  file_io.tog  functions.tog  gpu_advanced.tog  gpu_parallel.tog  hello.tog  math.tog  pattern_matching_complete.tog  pattern_matching_demo.tog  result_demo.tog  simple.tog  simple_result.tog  strings.tog  structs.tog  test_enum_data.tog  test_enum_simple.tog  test_result.tog  test_simple_pattern.tog  traits.tog  variables.tog
src/: ast.rs  error.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  stdlib.rs  type_checker.rs
src/compiler/: backend.rs  codegen.rs  ir.rs  loop_analysis.rs  mod.rs  native_gen.rs  optimizer.rs
stdlib/: prelude.tog
